--- a/index.html
+++ b/index.html
@@ -26,8 +26,59 @@
 		</section>
 		<section id="work">
 			<h2>Some of my projects</h2>
+			<div id="projects">
+				<div class="card">
+					<a href="https://codepen.io/tekkie7/pen/yqxyeV" target="_blank">
+						<img src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1272499.yqxyeV.small.7a6bc7cb-083c-4103-b260-3ea774695f1f.png" alt="Technical Documentation Page">
+						<span>Technical Documentation Page</span>
+					</a>
+				</div>
+				<div class="card">
+					<a href="https://codepen.io/tekkie7/pen/VBQyQb" target="_blank">
+						<img src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1272499.VBQyQb.small.aeb0b409-5944-433c-b93a-0dcdd1bcb88e.png" alt="Product Landing Page">
+						<span>Product Landing Page</span>
+					</a>
+				</div>
+				<div class="card">
+					<a href="https://codepen.io/tekkie7/pen/VbRewz" target="_blank">
+						<img src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1272499.VbRewz.small.a95793a0-5244-4170-a3a6-a0ea8f33e603.png" alt="Tribute Page">
+						<span>Tribute Page</span>
+					</a>
+				</div>
+				<div class="card">
+					<a href="https://codepen.io/tekkie7/pen/zzVaLJ" target="_blank">
+						<img src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1272499.zzVaLJ.small.5d9613cf-9a4b-493a-afc8-1899b8b2fa63.png" alt="Twitch Streamers">
+						<span>Twitch Streamers</span>
+					</a>
+				</div>
+				<div class="card">
+					<a href="https://codepen.io/tekkie7/pen/gRWXaR" target="_blank">
+						<img src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1272499.gRWXaR.small.a9abf007-02e2-4198-9d2b-7837cca2b160.png" alt="Wikipedia Viewer">
+						<span>Wikipedia Viewer</span>
+					</a>
+				</div>
+				<div class="card">
+					<a href="https://codepen.io/tekkie7/pen/OmKaYy" target="_blank">
+						<img src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1272499.OmKaYy.small.270b2957-0c5e-4f58-b23e-3635212ffac8.png" alt="Weather App">
+						<span>Weather App</span>
+					</a>
+				</div>
+			</div>
 		</section>
-		<section id="contact">write soemthing here!</section>
+		<section id="contact">
+			<div id="header">
+				<h2>Let's work together...</h2>
+				<span>How do you take your coffee?</span>
+			</div>
+			<div class="social">
+				<a class="circle" id="GitHub" href="https://github.com/matrixersp/" target="_blank">GitHub</a>		
+				<a class="circle" id="LinkedIn" href="https://www.linkedin.com/in/matrixersp/" target="_blank">LinkedIn</a>
+				<a class="circle" id="Facebook" href="https://www.facebook.com/matrixersp" target="_blank">Facebook</a>		
+				<a class="circle" id="Twitter" href="https://twitter.com/matrixersp" target="_blank">Twitter</a>		
+				<a class="circle" id="Send a mail" href="mailto:mboudad7@gmail.com">Send a mail</a>		
+				<a class="circle" id="Call me" href="tel:+213657223742">Call me</a>		
+			</div>
+		</section>
 	</main>
 
 	<footer>
