--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8" />
 	<title>Portfolio</title>
 	<link rel="stylesheet" href="./styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -84,7 +85,5 @@
 	<footer>
 		<span>Copyright &copy; 2018</span>
 	</footer>
-
-	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
